2000-11-15  Pavel Cisler  <pavel@eazel.com>

	* test/test-uri.c: (main):
	Tweak a test to verify that bug 3401 is fixed. No reviewer, sorry.

2000-11-15  Mathieu Lacage  <mathieu@eazel.com>

	* libgnomevfs/gnome-vfs-mime-info.c: 
	(context_new), cleanups.
	(load_mime_type_info_from), cleanups
	(load_mime_list_info_from), cleanups
	(reload_if_needed), rename from maybe_reload
	(set_value_real), new function.
	(gnome_vfs_mime_set_value), make it use funiton above.
	(get_value_real), new function
	(gnome_vfs_mime_get_value), make it use funciton above
	(gnome_vfs_mime_get_key_list), cleanups
	(gnome_vfs_mime_get_extensions_list), cleanups
	(gnome_vfs_mime_get_extensions_pretty_string), cleanups
	(gnome_vfs_get_registered_mime_types), cleanups
	(gnome_vfs_mime_set_registered_type_key), make it use
	set_value_real.
	(gnome_vfs_mime_get_registered_mime_type_key): make it
	use get_value_real.

2000-11-15  Mathieu Lacage  <mathieu@eazel.com>

	Buddy: pavel <pavel@eazel.com>
	
	* libgnomevfs/gnome-vfs-mime-handlers.c:
	(gnome_vfs_mime_get_default_action_type): fix a compilation warning.
	remove a unused variable.
	* libgnomevfs/gnome-vfs-mime-info.c: 
	(load_mime_list_info_from), spaces...
	(get_key_name), add checks not to return deleted mime types and
	not to return comments as mime types.
	(gnome_vfs_mime_reset), new API function: resets to system defaults.
	(gnome_vfs_mime_registered_mime_type_delete), new API fution: deletes 
	a mime type.
	(gnome_vfs_mime_get_registered_mime_type_key), new non-exported function.
	(write_back_mime_user_file_context_callback): spaces...
	* libgnomevfs/gnome-vfs-mime-info.h: new prototypes.
	* test/test-mime-info.c: (main): add testing code for teh new API.

2000-11-15  Mathieu Lacage  <mathieu@eazel.com>

	Buddy: pavel <pavel@eazel.com>
	
	Fix bug 2650. remove *_without_fallback code.
	* libgnomevfs/gnome-vfs-mime-handlers.c:
	(gnome_vfs_mime_get_default_action_type),
	(gnome_vfs_mime_get_default_action),